--- a/TeachCode/app/src/main/res/layout/activity_login.xml
+++ b/TeachCode/app/src/main/res/layout/activity_login.xml
@@ -6,95 +6,115 @@
     android:layout_height="match_parent"
     android:background="@drawable/wallpaper"
     tools:context=".Login">
-INTERNET
+
     <TextView
-        android:id="@+id/appTitle"
+        android:id="@+id/appLogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/teach_code"
         android:textColor="#F7F2F2"
         android:textSize="30sp"
         app:fontFamily="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/loginText"
+        android:id="@+id/createUserLogText"
         android:layout_width="259dp"
         android:layout_height="21dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginTop="40dp"
-        android:text="Login as Existing User"
+        android:text="@string/login_as_existing_user"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         app:fontFamily="monospace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 
     <EditText
-        android:id="@+id/emailText"
+        android:id="@+id/emailLogText"
         android:layout_width="276dp"
         android:layout_height="51dp"
-        android:layout_marginTop="40dp"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="textEmailAddress"
         android:padding="10dp"
-        android:text="@string/email"
         android:textColor="@android:color/background_light"
         android:textSize="14sp"
         app:fontFamily="monospace"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginText" />
+        app:layout_constraintTop_toBottomOf="@+id/emailLogView" />
 
     <EditText
-        android:id="@+id/passwordText"
+        android:id="@+id/passwordLogText"
         android:layout_width="276dp"
         android:layout_height="51dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPassword"
         android:padding="10dp"
-        android:text="@string/password"
         android:textColor="@android:color/background_light"
         android:textSize="14sp"
         app:fontFamily="monospace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailText" />
-
-    <Button
-        android:id="@+id/registerBtn"
-        android:layout_width="194dp"
-        android:layout_height="67dp"
-        android:layout_marginBottom="240dp"
-        android:text="@string/login"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordText" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordLogView" />
 
     <TextView
-        android:id="@+id/createText"
+        android:id="@+id/createLogText"
         android:layout_width="205dp"
         android:layout_height="38dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginLeft="92dp"
         android:text="@string/create_new_account"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         app:fontFamily="monospace"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appLogTitle" />
+
+    <TextView
+        android:id="@+id/emailLogView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/email"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createLogText" />
+
+    <TextView
+        android:id="@+id/passwordLogView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/password"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailLogText" />
+
+    <Button
+        android:id="@+id/loginBtn"
+        android:layout_width="102dp"
+        android:layout_height="57dp"
+        android:text="@string/login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordLogText" />
+
+    <ProgressBar
+        android:id="@+id/progressLogBar"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
+        android:layout_width="74dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="332dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.096"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
-        app:layout_constraintVertical_bias="0.128" />
+        app:layout_constraintTop_toBottomOf="@+id/createUserLogText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
