--- a/TeachCode/app/src/main/res/layout/activity_main.xml
+++ b/TeachCode/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.142"
-        tools:srcCompat="@android:drawable/sym_def_app_icon" />
+        tools:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/yourProfile"
