--- a/TeachCode/app/src/main/res/layout/activity_main.xml
+++ b/TeachCode/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,6 @@
     android:background="@drawable/wallpaper"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/fullNameMain"
-        android:layout_width="246dp"
-        android:layout_height="33dp"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.63"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fullNameProView" />
 
     <Button
         android:id="@+id/logoutBtn"
@@ -30,45 +20,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.682" />
 
-    <TextView
-        android:id="@+id/emailMain"
-        android:layout_width="247dp"
-        android:layout_height="29dp"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.634"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailProView" />
 
     <TextView
-        android:id="@+id/phoneMain"
-        android:layout_width="244dp"
-        android:layout_height="39dp"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.622"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneProView" />
-
-    <ImageView
-        android:id="@+id/profilePicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.047"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.142"
-        tools:srcCompat="@drawable/ic_launcher_background" />
-
-    <TextView
-        android:id="@+id/yourProfile"
+        android:id="@+id/teachcode"
         android:layout_width="148dp"
         android:layout_height="47dp"
-        android:text="Your Profile"
+        android:text="@string/teach_code"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,67 +35,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023" />
 
-    <TextView
-        android:id="@+id/verifyMsg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email Not Verified!"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneMain" />
 
-    <Button
-        android:id="@+id/verifyBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="VERIFY NOW"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/verifyMsg"
-        app:layout_constraintVertical_bias="0.023" />
 
-    <TextView
-        android:id="@+id/fullNameProView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Your Name:"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.308"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yourProfile" />
 
-    <TextView
-        android:id="@+id/emailProView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Your Email:"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.305"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fullNameMain" />
 
-    <TextView
-        android:id="@+id/phoneProView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="@string/phone"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.283"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailMain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
